--- a/index.css
+++ b/index.css
@@ -1,45 +1,70 @@
- @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
- body {
+body {
   margin: 0;
-  padding:0;
-  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  background-image: url('https://images.unsplash.com/photo-1566981191382-8b91997ba000?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  object-fit: cover;
+  object-position: top;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    font-weight: 500;
-   margin:5px;    
-}
+ }
  
-
 .container
  {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top:130px;
  }
-
-.container .img1{
-  width:250px;
-  height:200px;
-  margin:2px;
-  float:left;
+ .container h1{
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size:4rem;
+  font-family:600;
+  color:#FAF8FC;
+ }
+.container .containerBody{
+  width:65%;
+  height:280px;
+  text-align: center; 
+  display: block;
+  position: relative;
+  -moz-box-shadow:    1px 1px 3px 4px #ccc;
+  -webkit-box-shadow: 1px 1px 3px 4px #ccc;
+  box-shadow:         1px 1px 3px 4px #ccc;  
 }
 
-.GalleryText{
-  color:rgb(224, 62, 116);
-  text-align:center;
-  text-transform:uppercase;
-  font-weight:bold;
-  margin:20px 0px;
-  text-shadow:0px 2px 4px #ffe9c5; 
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size:2rem;
+.container .containerBody::after {
+  content: "";
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9VuRQUVPLlUm4vZG1hjiDViVDRHhs55X1KQ&usqp=CAU");
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1; 
+ 
+}
+.h2margin{
+  margin-top:-35px;
+  font-size: 2.8rem; 
+  font-family: 'Montserrat', sans-serif;
+  word-spacing: 3px;
+}
+.helloText{
+  color: #03203C ;
 }
