--- a/basics/src/App.css
+++ b/basics/src/App.css
@@ -38,3 +38,69 @@
   background-color:royalblue;
   margin:15px;
 }
+
+
+/*Todo Style*/
+.todoHeader{
+  color:#9400d3;
+  text-align:center;
+  text-transform:uppercase;
+  font-weight:bold;
+  margin:5px 0px 15px 0px;
+  text-shadow:0px 2px 4px #ffe9c5;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size:2.6rem;
+}
+.inputSty{
+  display:inline;
+  padding-top:20px;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid #9400d3 ;
+  font-size: 1.6rem;
+  color:#9400d3 ;  
+}
+.inputSty:hover{ 
+  outline: 0;
+}
+.listData{
+  list-style-type: none;
+}
+/*.todoButton{
+  display:inline-block;
+  height: 20px;
+  width: 20px;
+  color:white;
+  border: 0;
+}*/
+.round-button {
+  display:inline-block;
+  width:60px;
+}
+.round-button-circle {
+  width: 100%;
+  height:0;
+  margin-bottom: 0px;
+  padding-bottom: 100%;
+  border-radius: 50%;
+  border:8px solid #cfdcec;
+  overflow:hidden;      
+  background: #9400d3; 
+  box-shadow: 0 0 3px gray;
+}
+.round-button-circle:hover {
+  background:#30588e;
+}
+.round-button a {
+  width:100%;
+  padding-top:50%;
+  padding-bottom:50%;
+  line-height:1em;     
+  text-align:center;
+  color:#e2eaf3;
+  font-family:Verdana;
+  font-size:1.2em;
+  font-weight:bold;
+  text-decoration:none;
+}
+/*End Todo Style*/
