--- a/basics/src/App.css
+++ b/basics/src/App.css
@@ -57,7 +57,7 @@
   border: 0;
   outline: 0;
   border-bottom: 2px solid #9400d3 ;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   color:#9400d3 ;  
 }
 .inputSty:hover{ 
@@ -73,34 +73,33 @@
   color:white;
   border: 0;
 }*/
-.round-button {
-  display:inline-block;
-  width:60px;
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  background-color:#9400d3;
 }
-.round-button-circle {
-  width: 100%;
-  height:0;
-  margin-bottom: 0px;
-  padding-bottom: 100%;
-  border-radius: 50%;
-  border:8px solid #cfdcec;
-  overflow:hidden;      
-  background: #9400d3; 
-  box-shadow: 0 0 3px gray;
+.btn-circle, .btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
 }
-.round-button-circle:hover {
-  background:#30588e;
+.allListItem{
+  font-size:20px;
+  color:dodgerblue;
+  font-family: "Helvetica Neue",;
+  text-transform: capitalize;
 }
-.round-button a {
-  width:100%;
-  padding-top:50%;
-  padding-bottom:50%;
-  line-height:1em;     
-  text-align:center;
-  color:#e2eaf3;
-  font-family:Verdana;
-  font-size:1.2em;
-  font-weight:bold;
-  text-decoration:none;
+.deleteIcon{
+  background-color:#9400d3;
+  color:white;
+  border-radius: 25px;
 }
 /*End Todo Style*/
