--- a/basics/src/App.css
+++ b/basics/src/App.css
@@ -58,7 +58,7 @@
   outline: 0;
   border-bottom: 2px solid #9400d3 ;
   font-size: 1.4rem;
-  color:#9400d3 ;  
+  columns: #ff22ee27;  
 }
 .inputSty:hover{ 
   outline: 0;
@@ -80,26 +80,39 @@
   padding: 6px 0;
   font-size: 12px;
   line-height: 1.428571429;
-  border-radius: 15px;
+  border-radius: 100%;
   background-color:#9400d3;
 }
+.btn-circle:hover {
+  background-color:#b21df1;
+ }
 .btn-circle, .btn-lg {
   width: 50px;
   height: 50px;
-  padding: 10px 16px;
+  padding: 10px 8px;
   font-size: 18px;
-  line-height: 1.33;
+  line-height: 1;
   border-radius: 25px;
 }
 .allListItem{
   font-size:20px;
-  color:dodgerblue;
+  color:#03203C;
   font-family: "Helvetica Neue",;
   text-transform: capitalize;
 }
 .deleteIcon{
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 1px 0;
+  font-size: 20px;
+  line-height: 1;
+  border-radius: 100%;
   background-color:#9400d3;
-  color:white;
-  border-radius: 25px;
+ 
+}
+.deleteIcon:hover{
+  background-color:#f81504;
+ 
 }
 /*End Todo Style*/
