--- a/basics/src/App.css
+++ b/basics/src/App.css
@@ -75,7 +75,7 @@
   width: 30px;
   height: 30px;
   text-align: center;
-  padding: 6px 0;
+  padding: 6px 6px;
   font-size: 12px;
   line-height: 1.428571429;
   border-radius: 100%;
@@ -85,12 +85,18 @@
   background-color:#b21df1;
  }
 .btn-circle, .btn-lg {
-  width: 50px;
-  height: 50px;
+  width: 52px;
+  height: 52px;
   padding: 10px 8px;
   font-size: 18px;
   line-height: 1;
   border-radius: 25px;
+}
+.btn-lg, .btn-group-lg > .btn {
+   padding: 0px !important; 
+   font-size: 0px !important; 
+  line-height: 1 !important; 
+  border-radius: 100% !important; 
 }
 .allListItem{
   font-size:20px;
@@ -102,7 +108,7 @@
   width: 30px;
   height: 30px;
   text-align: center;
-  padding: 1px 0;
+  padding: 0px 0;
   font-size: 20px;
   line-height: 1;
   border-radius: 100%;
